// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text スナップショット Colors 1`] = `
<body>
  <div>
    <p
      class="text_textStyle__1djq151e text_textStyle_color_currentColor__1djq151i text_textStyle_variants_color_currentColor__1djq1513 text_textStyle_size_100__1djq151l text_textStyle_variants_size_100__1djq1516 text_textStyle_weight_normal__1djq151u"
    >
      currentColor (default)
    </p>
    <p
      class="text_textStyle__1djq151e text_textStyle_color_primary__1djq151f text_textStyle_variants_color_primary__1djq1510 text_textStyle_size_100__1djq151l text_textStyle_variants_size_100__1djq1516 text_textStyle_weight_normal__1djq151u"
    >
      primary
    </p>
    <p
      class="text_textStyle__1djq151e text_textStyle_color_secondary__1djq151g text_textStyle_variants_color_secondary__1djq1511 text_textStyle_size_100__1djq151l text_textStyle_variants_size_100__1djq1516 text_textStyle_weight_normal__1djq151u"
    >
      secondary
    </p>
    <p
      class="text_textStyle__1djq151e text_textStyle_color_tertiary__1djq151h text_textStyle_variants_color_tertiary__1djq1512 text_textStyle_size_100__1djq151l text_textStyle_variants_size_100__1djq1516 text_textStyle_weight_normal__1djq151u"
    >
      tertiary
    </p>
  </div>
</body>
`;

exports[`Text スナップショット Sample 1`] = `
<body>
  <div>
    <h1
      class="text_textStyle__1djq151e text_textStyle_color_currentColor__1djq151i text_textStyle_variants_color_currentColor__1djq1513 text_textStyle_size_600__1djq151q text_textStyle_variants_size_600__1djq151b text_textStyle_weight_bold__1djq151t"
    >
      H1
    </h1>
    <h2
      class="text_textStyle__1djq151e text_textStyle_color_currentColor__1djq151i text_textStyle_variants_color_currentColor__1djq1513 text_textStyle_size_500__1djq151p text_textStyle_variants_size_500__1djq151a text_textStyle_weight_bold__1djq151t"
    >
      H2
    </h2>
    <h3
      class="text_textStyle__1djq151e text_textStyle_color_currentColor__1djq151i text_textStyle_variants_color_currentColor__1djq1513 text_textStyle_size_400__1djq151o text_textStyle_variants_size_400__1djq1519 text_textStyle_weight_bold__1djq151t"
    >
      H3
    </h3>
    <h4
      class="text_textStyle__1djq151e text_textStyle_color_currentColor__1djq151i text_textStyle_variants_color_currentColor__1djq1513 text_textStyle_size_300__1djq151n text_textStyle_variants_size_300__1djq1518 text_textStyle_weight_bold__1djq151t"
    >
      H4
    </h4>
    <p
      class="text_textStyle__1djq151e text_textStyle_color_currentColor__1djq151i text_textStyle_variants_color_currentColor__1djq1513 text_textStyle_size_100__1djq151l text_textStyle_variants_size_100__1djq1516 text_textStyle_weight_normal__1djq151u"
    >
      P
    </p>
    <span
      class="text_textStyle__1djq151e text_textStyle_color_currentColor__1djq151i text_textStyle_variants_color_currentColor__1djq1513 text_textStyle_size_100__1djq151l text_textStyle_variants_size_100__1djq1516 text_textStyle_weight_normal__1djq151u"
    >
      Span
    </span>
  </div>
</body>
`;

exports[`Text スナップショット Sizes 1`] = `
<body>
  <div>
    <p
      class="text_textStyle__1djq151e text_textStyle_color_currentColor__1djq151i text_textStyle_variants_color_currentColor__1djq1513 text_textStyle_size_50__1djq151j text_textStyle_variants_size_50__1djq1514 text_textStyle_weight_normal__1djq151u"
    >
      50
    </p>
    <p
      class="text_textStyle__1djq151e text_textStyle_color_currentColor__1djq151i text_textStyle_variants_color_currentColor__1djq1513 text_textStyle_size_100__1djq151l text_textStyle_variants_size_100__1djq1516 text_textStyle_weight_normal__1djq151u"
    >
      100 (default)
    </p>
    <p
      class="text_textStyle__1djq151e text_textStyle_color_currentColor__1djq151i text_textStyle_variants_color_currentColor__1djq1513 text_textStyle_size_200__1djq151m text_textStyle_variants_size_200__1djq1517 text_textStyle_weight_normal__1djq151u"
    >
      200
    </p>
    <p
      class="text_textStyle__1djq151e text_textStyle_color_currentColor__1djq151i text_textStyle_variants_color_currentColor__1djq1513 text_textStyle_size_300__1djq151n text_textStyle_variants_size_300__1djq1518 text_textStyle_weight_normal__1djq151u"
    >
      300
    </p>
    <p
      class="text_textStyle__1djq151e text_textStyle_color_currentColor__1djq151i text_textStyle_variants_color_currentColor__1djq1513 text_textStyle_size_400__1djq151o text_textStyle_variants_size_400__1djq1519 text_textStyle_weight_normal__1djq151u"
    >
      400
    </p>
    <p
      class="text_textStyle__1djq151e text_textStyle_color_currentColor__1djq151i text_textStyle_variants_color_currentColor__1djq1513 text_textStyle_size_500__1djq151p text_textStyle_variants_size_500__1djq151a text_textStyle_weight_normal__1djq151u"
    >
      500
    </p>
    <p
      class="text_textStyle__1djq151e text_textStyle_color_currentColor__1djq151i text_textStyle_variants_color_currentColor__1djq1513 text_textStyle_size_600__1djq151q text_textStyle_variants_size_600__1djq151b text_textStyle_weight_normal__1djq151u"
    >
      600
    </p>
    <p
      class="text_textStyle__1djq151e text_textStyle_color_currentColor__1djq151i text_textStyle_variants_color_currentColor__1djq1513 text_textStyle_size_700__1djq151r text_textStyle_variants_size_700__1djq151c text_textStyle_weight_normal__1djq151u"
    >
      700
    </p>
    <p
      class="text_textStyle__1djq151e text_textStyle_color_currentColor__1djq151i text_textStyle_variants_color_currentColor__1djq1513 text_textStyle_size_800__1djq151s text_textStyle_variants_size_800__1djq151d text_textStyle_weight_normal__1djq151u"
    >
      800
    </p>
  </div>
</body>
`;

exports[`Text スナップショット Weights 1`] = `
<body>
  <div>
    <p
      class="text_textStyle__1djq151e text_textStyle_color_currentColor__1djq151i text_textStyle_variants_color_currentColor__1djq1513 text_textStyle_size_100__1djq151l text_textStyle_variants_size_100__1djq1516 text_textStyle_weight_normal__1djq151u"
    >
      normal (default)
    </p>
    <p
      class="text_textStyle__1djq151e text_textStyle_color_currentColor__1djq151i text_textStyle_variants_color_currentColor__1djq1513 text_textStyle_size_100__1djq151l text_textStyle_variants_size_100__1djq1516 text_textStyle_weight_bold__1djq151t"
    >
      bold
    </p>
  </div>
</body>
`;
